err/vld.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/cached_property-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pignacio_scripts'...
Listing './lib/python3.5/site-packages/pignacio_scripts/nagios'...
Listing './lib/python3.5/site-packages/pignacio_scripts/namedtuple'...
Listing './lib/python3.5/site-packages/pignacio_scripts/pylint_extra'...
Listing './lib/python3.5/site-packages/pignacio_scripts/pylint_extra/transforms'...
Listing './lib/python3.5/site-packages/pignacio_scripts/python_snippets'...
Listing './lib/python3.5/site-packages/pignacio_scripts/terminal'...
Listing './lib/python3.5/site-packages/pignacio_scripts/testing'...
Listing './lib/python3.5/site-packages/pignacio_scripts-0.0.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/vld'...
Listing './lib/python3.5/site-packages/vld/commands'...
Compiling './lib/python3.5/site-packages/vld/commands/count.py'...
***   File "./lib/python3.5/site-packages/vld/commands/count.py", line 54
    print green(data.name)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vld/commands/new_ingredient.py'...
***   File "./lib/python3.5/site-packages/vld/commands/new_ingredient.py", line 77
    print json.dumps(ingredient.as_json(), indent=1)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vld/commands/price.py'...
***   File "./lib/python3.5/site-packages/vld/commands/price.py", line 44
    print data.name,
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vld/commands/report.py'...
***   File "./lib/python3.5/site-packages/vld/commands/report.py", line 37
    print "The logs were empty :("
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vld/commands/show_ingredients.py'...
***   File "./lib/python3.5/site-packages/vld/commands/show_ingredients.py", line 65
    print "No ingredients :("
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vld/output'...
Listing './lib/python3.5/site-packages/vld-0.0.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
